# rust-png

./: .gitignore  CHANGELOG.md  COMPATIBILITY_ANALYSIS.md  CRATES_IO_PREPARATION.md  Cargo.toml  LICENSE  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PUBLISHING.md  README.md  RELEASE_NOTES.md  build.js  build.sh  build_and_test.js  example.html  example.js  package.json  test_compatibility.js  types.d.ts
docs/: API.md  EXAMPLES.md  MIGRATION.md  PERFORMANCE.md
examples/: Cargo.toml  README.md  advanced_features.rs  advanced_filters.rs  basic_usage.rs  complete_application.rs  wasm_optimization.rs
saas-platform/: README.md  docker-compose.yml  env.example  package.json
saas-platform-nextjs/: README.md  env.example  next.config.js  package.json  tailwind.config.js  tsconfig.json
saas-platform-nextjs/app/: globals.css  layout.tsx  page.tsx
saas-platform-nextjs/app/(auth)/login/: page.tsx
saas-platform-nextjs/app/(auth)/register/: page.tsx
saas-platform-nextjs/app/api/images/: route.ts
saas-platform-nextjs/components/auth/: LoginForm.tsx  RegisterForm.tsx
saas-platform-nextjs/components/layout/: DashboardLayout.tsx
saas-platform-nextjs/components/pages/: DashboardPage.tsx  HomePage.tsx
saas-platform-nextjs/components/ui/: FileUpload.tsx  ImagePreview.tsx  ImageProcessor.tsx  LoadingSpinner.tsx
saas-platform-nextjs/lib/: utils.ts
saas-platform-nextjs/lib/auth/: AuthProvider.tsx
saas-platform-nextjs/lib/supabase/: client.ts  server.ts
saas-platform-nextjs/supabase/: config.toml  seed.sql
saas-platform-nextjs/supabase/migrations/: 001_initial_schema.sql  002_row_level_security.sql  003_storage_setup.sql
saas-platform-nextjs/types/: supabase.ts
saas-platform/backend/: package.json
saas-platform/backend/prisma/: schema.prisma
saas-platform/backend/src/: index.ts
saas-platform/docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.processor
saas-platform/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
saas-platform/frontend/src/: App.tsx  index.css  main.tsx
saas-platform/image-processor/: package.json
saas-platform/image-processor/src/: index.ts
saas-platform/nginx/: nginx.conf
saas-platform/shared/types/: processing.ts
scripts/: check-release.sh  fix-compilation.sh  publish.sh
src/: advanced_filters.rs  advanced_png.rs  bitmap.rs  bitmapper.rs  chunk_stream.rs  constants.rs  crc.rs  custom_filters.rs  error_handling.rs  filter.rs  filter_extensible.rs  filter_optimizer.rs  filter_pack.rs  interlace.rs  lib.rs  performance.rs  png.rs  png_chunks.rs  png_packer.rs  png_semantic.rs  png_structures.rs  sync_inflate.rs  testing.rs  utils.rs  wasm_optimization.rs
test/: test.js
tests/: filter_extensible_tests.rs  integration_tests.rs  interlace_tests.rs  semantic_png_tests.rs
(+41 files in other folders)
