[package]
name = "rust-png"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of pngjs with WASM support"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
png = "0.17"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
console_error_panic_hook = "0.1"
flate2 = "1.0"
num_cpus = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "ArrayBuffer",
  "Uint8Array",
  "Uint8ClampedArray",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
