[package]
name = "rust-png"
version = "0.1.0"
edition = "2021"
authors = ["Royal Wang <royalwang@example.com>"]
description = "A high-performance Rust PNG processing library with 100% pngjs compatibility and WebAssembly support"
license = "MIT"
repository = "https://github.com/royalwang/rust-png"
homepage = "https://github.com/royalwang/rust-png"
documentation = "https://docs.rs/rust-png"
keywords = ["png", "image", "webassembly", "wasm", "pngjs", "image-processing"]
categories = ["multimedia::images", "wasm", "web-programming"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm", "parallel", "simd"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]
parallel = ["rayon"]
simd = []
advanced-filters = []
performance-monitoring = []
memory-optimization = []

[dependencies]
png = "0.17"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "console",
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_json = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }
flate2 = "1.0"
num_cpus = "1.0"
rayon = { version = "1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
